<resources>
    <string name="app_name">MobileSensing</string>
    <string name="luma_label">Luminosity:</string>
    <string name="luma_value" />
    <string name="menu_open">Open</string>
    <string name="menu_close">Close</string>
    <string name="max_objects_label">Max Objects:</string>
    <string name="max_objects_value" />
    <string name="string_nothing">Nothing</string>
    <string name="string_clothing">Clothing</string>
    <string name="string_earrings">Earrings</string>
    <string name="string_footwear">Footwear</string>
    <string name="string_glasses">Glasses</string>
    <string name="string_necklace">Necklace</string>
    <string name="string_watch">Watch</string>
    <string name="string_wheelchair">Wheelchair</string>
    <string name="string_coin">Coin</string>
    <string name="string_center">Center</string>
    <string name="string_lowerleft">LowerLeft</string>
    <string name="string_lowerright">LowerRight</string>
    <string name="string_upperleft">UpperLeft</string>
    <string name="string_upperright">UpperRight</string>
</resources>