<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/menu_objects">

    <RadioButton
        android:id="@+id/menu_nothing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/string_nothing"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <RadioButton
        android:id="@+id/menu_clothing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/string_clothing"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <RadioButton
        android:id="@+id/menu_coin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/string_coin"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <RadioButton
        android:id="@+id/menu_earrings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/string_earrings"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <RadioButton
        android:id="@+id/menu_footwear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/string_footwear"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <RadioButton
        android:id="@+id/menu_glasses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/string_glasses"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <RadioButton
        android:id="@+id/menu_necklace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/string_necklace"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <RadioButton
        android:id="@+id/menu_watch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/string_watch"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <RadioButton
        android:id="@+id/menu_wheelchair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/string_wheelchair"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <RadioButton
        android:id="@+id/menu_filler_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="FILLERSTRINGFILLERSTRING"
        android:enabled="false"
        android:visibility="invisible"
        android:textColor="@color/transparent"
        android:textSize="20sp" />

    <RadioButton
        android:id="@+id/menu_filler_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="FILLERSTRINGFILLERSTRING"
        android:enabled="false"
        android:visibility="invisible"
        android:textColor="@color/transparent"
        android:textSize="20sp" />
</RadioGroup>